--- a/templates/admin_session/new.html.twig
+++ b/templates/admin_session/new.html.twig
@@ -11,7 +11,7 @@
 	</h1>
 	<div class="row justify-content-center m-0">
 		<div class="col-lg-8 fs-4 border border-3 border-secondary p-3 rounded bg-light">
-			{{ include('admin_session/_form.html.twig') }}
+			{% include 'admin_session/_form.html.twig' %}
 		</div>
 	</div>
 {% endblock %}
