--- a/assets/styles/admin.scss
+++ b/assets/styles/admin.scss
@@ -1,9 +1,14 @@
 @import "variables.scss";
 
 .table {
-    box-shadow     : $shadow-card;
-    border         : 4px solid $secondary;
-    border-radius  : $spacing;
+    box-shadow   : $shadow-card;
+    border       : 4px solid $secondary;
+    border-radius: $spacing;
+
+    th {
+        font-family: $font;
+    }
+
 
     thead tr td span {
         width        : fit-content;
