--- a/templates/admin_session/index.html.twig
+++ b/templates/admin_session/index.html.twig
@@ -15,13 +15,13 @@
 		Administration prestations
 	</h1>
 	<table class="table table-hover bg-light">
-		<thead class="bg-primary text-light">
+		<thead class="bg-light text-primary">
 			<tr>
-				<th class="fs-4">Titre</th>
+				<th class="fs-4">Catégories et prestations</th>
 				<th>
 					<div class="d-flex justify-content-end">
-						<a class="btn btn-secondary px-3 py-1 text-light d-flex align-items-center justify-content-center" href="{{ path('admin_category_new') }}">
-							<i class="bi bi-plus-circle m-1"></i>Catégorie
+						<a class="btn btn-success p-2 text-light d-flex align-items-center justify-content-center" href="{{ path('admin_category_new') }}">
+							<i class="bi bi-plus-circle ms-1 me-2"></i>Catégorie 
 						</a>
 					</div>
 				</th>
@@ -33,11 +33,11 @@
 					<td class="align-middle fs-4">{{ category.title }}</td>
 					<td>
 						<div class="d-flex justify-content-end flex-column flex-lg-row gap-3">
-							<a class="btn btn-success px-3 py-1 text-light d-flex align-items-center justify-content-center" href="{{ path('admin_session_new', {'id': category.id}) }}">
-								<i class="bi bi-plus-circle m-1"></i>Prestation
+							<a class="btn btn-success p-2 text-light d-flex align-items-center justify-content-center" href="{{ path('admin_session_new', {'id': category.id}) }}">
+								<i class="bi bi-plus-circle ms-1 me-2"></i>Prestation
 							</a>
-							<a class="btn btn-primary px-3 py-1 d-flex align-items-center justify-content-center" href="{{ path('admin_category_edit', {'id': category.id}) }}">
-								<i class="bi bi-pencil-square m-1"></i>Modifier
+							<a class="btn btn-primary p-2 d-flex align-items-center justify-content-center" href="{{ path('admin_category_edit', {'id': category.id}) }}">
+								<i class="bi bi-pencil-square ms-1 me-2"></i>Modifier
 							</a>
 							{{ include('admin_category/_delete_form.html.twig') }}
 						</div>
@@ -45,11 +45,11 @@
 				</tr>
 				{% for session in category.sessions %}
 					<tr>
-						<td class="align-middle">{{ session.title }}</td>
+						<td class="align-middle ps-4">{{ session.title }}</td>
 						<td>
 							<div class="d-flex justify-content-end flex-column flex-lg-row gap-3">
-								<a class="btn btn-primary px-3 py-1 d-flex align-items-center justify-content-center" href="{{ path('admin_session_edit', {'id': session.id}) }}">
-									<i class="bi bi-pencil-square m-1"></i>Modifier
+								<a class="btn btn-primary p-2 d-flex align-items-center justify-content-center" href="{{ path('admin_session_edit', {'id': session.id}) }}">
+									<i class="bi bi-pencil-square ms-1 me-2"></i>Modifier
 								</a>
 								{{ include('admin_session/_delete_form.html.twig') }}
 							</div>
