added priceDescritpion field

--- a/templates/admin_session/_form.html.twig
+++ b/templates/admin_session/_form.html.twig
@@ -7,6 +7,10 @@
         'attr': {
         'class': 'd-none'
         }}) }}
+{{ form_widget(form.category.priceDescription, {
+        'attr': {
+        'class': 'd-none'
+        }}) }}
 {{ form_row(form.title) }}
 {{ form_row(form.description) }}
 <div class="d-flex justify-content-between">
