--- a/templates/admin_actuality/_delete_form.html.twig
+++ b/templates/admin_actuality/_delete_form.html.twig
@@ -1,4 +1,6 @@
-<form method="post" action="{{ path('admin_actuality_delete', {'id': actuality.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
-    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ actuality.id) }}">
-    <button class="btn btn-danger my-3 fs-4"><i class="bi bi-trash"></i></button>
+<form method="post" action="{{ path('admin_actuality_delete', {'id': actuality.id}) }}" onsubmit="return confirm('Voulez-vous vraiment supprimer \&#34;{{ actuality.title }}\&#34; ?');">
+	<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ actuality.id) }}">
+	<button class="btn btn-danger p-2 d-flex align-items-center justify-content-center">
+		<i class="bi bi-trash text-light ms-1 me-2"></i>Supprimer
+	</button>
 </form>
