--- a/templates/admin_actuality/index.html.twig
+++ b/templates/admin_actuality/index.html.twig
@@ -31,7 +31,7 @@
 							<a class="btn btn-primary p-2 d-flex align-items-center justify-content-center" href="{{ path('admin_actuality_edit', {'id': actuality.id}) }}">
 								<i class="bi bi-pencil-square ms-1 me-2"></i>Modifier
 							</a>
-							{{ include('admin_actuality/_delete_form.html.twig') }}
+							{% include 'admin_actuality/_delete_form.html.twig' %}
 						</div>
 					</td>
 				</tr>
