--- a/templates/admin_actuality/edit.html.twig
+++ b/templates/admin_actuality/edit.html.twig
@@ -9,11 +9,12 @@
 {% endblock %}
 
 {% block body %}
-	<main class="container my-5">
-		<h1 class="text-center text-primary">Edition actualité</h1>
-		{{ include('admin_actuality/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
-		<div class="d-flex justify-content-start">
-			<a class="btn btn-primary mt-3" href="{{ path('admin_actuality_index') }}"><i class="bi bi-caret-left-square-fill me-2"></i>Retour à la liste</a>
+	<h1 class="pageTitle text-primary my-5 fs-1">
+		Modifier une actualité
+	</h1>
+	<div class="row justify-content-center m-0">
+		<div class="col-lg-8 fs-4 border border-3 border-secondary p-3 rounded bg-light">
+			{% include 'admin_actuality/_form.html.twig' with {'button_label' : '<i class="bi bi-pencil-square m-1"></i>Modifier'} %}
 		</div>
-	</main>
+	</div>
 {% endblock %}
