--- a/templates/admin_category/_delete_form.html.twig
+++ b/templates/admin_category/_delete_form.html.twig
@@ -1,6 +1,6 @@
 <form method="post" action="{{ path('admin_category_delete', {'id': category.id}) }}" onsubmit="return confirm('Voulez-vous vraiment supprimer la catégorie \&#34;{{ category.title }}\&#34; ?');">
 	<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ category.id) }}">
-	<button class="btn btn-danger p-2 d-flex align-items-center justify-content-center">
+	<button class="btn btn-danger p-2 d-flex align-items-center justify-content-center w-100">
 		<i class="bi bi-trash text-light ms-1 me-2"></i>Supprimer
 	</button>
 </form>
