--- a/templates/admin_actuality/edit.html.twig
+++ b/templates/admin_actuality/edit.html.twig
@@ -6,6 +6,7 @@
 
 {% block stylesheets %}
 	{{ encore_entry_link_tags('edit') }}
+	{{ encore_entry_link_tags('admin') }}
 {% endblock %}
 
 {% block body %}
