--- a/templates/admin_actuality/index.html.twig
+++ b/templates/admin_actuality/index.html.twig
@@ -7,7 +7,7 @@
 
 {% block body %}
 	<h1 class="pageTitle text-primary my-5 fs-1">
-		Administration actualitiés
+		Administration actualités
 	</h1>
 	<table class="table table-hover bg-light border border-4 border-secondary">
 		<thead class="bg-light text-primary">
