--- a/assets/styles/admin.scss
+++ b/assets/styles/admin.scss
@@ -1,11 +1,26 @@
 @import "variables.scss";
 
 .table {
-    box-shadow   : $shadow-card;
-    border       : 4px solid $secondary;
+    box-shadow: $shadow-card;
+    border    : 4px solid $secondary;
 
     thead tr td span {
         width        : fit-content;
         border-bottom: 1px solid $secondary;
+    }
+}
+
+.vich-image {
+    img {
+        width : 100%;
+        height: auto;
+    }
+
+    label {
+        font-size: medium;
+    }
+
+    a {
+        font-size: medium;
     }
 }
