--- a/templates/base-admin.html.twig
+++ b/templates/base-admin.html.twig
@@ -2,3 +2,15 @@
 {% block navbar %}
 	{% include "items/_navbarAdmin.html.twig" %}
 {% endblock %}
+{% block flash %}
+	{% for category, messages in app.flashes %}
+		{% for message in messages %}
+			<div class="row justify-content-center align-items-center m-0 mt-3">
+				<div class="col-5 d-flex align-items-center justify-content-center alert alert-{{ category }} alert-dismissible fade show flash">
+					{{ message|raw }}
+					<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+				</div>
+			</div>
+		{% endfor %}
+	{% endfor %}
+{% endblock %}
