--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,10 +21,23 @@
 			{% include "items/_navbar.html.twig" %}
 		{% endblock %}
 		{% block header %}{% endblock %}
-		<main class="container"> {% block flash %}{% endblock %}{% block body %}{% endblock %}
-			</main>
-			{% block footer %}
-				{% include "items/_footer.html.twig" %}
+		<main class="container">
+			{% block flash %}
+				{% for category, messages in app.flashes %}
+					{% for message in messages %}
+						<div class="row justify-content-center align-items-center m-0 mt-5">
+							<div class="col-5 d-flex align-items-center justify-content-center alert alert-{{ category }} alert-dismissible fade show flash">
+								{{ message|raw }}
+								<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+							</div>
+						</div>
+					{% endfor %}
+				{% endfor %}
 			{% endblock %}
-		</body>
-	</html>
+			{% block body %}{% endblock %}
+		</main>
+		{% block footer %}
+			{% include "items/_footer.html.twig" %}
+		{% endblock %}
+	</body>
+</html>
