fix cards home width

--- a/templates/items/_actualityCards.html.twig
+++ b/templates/items/_actualityCards.html.twig
@@ -1,5 +1,5 @@
 {% for actuality in actualities %}
-	<div class="actuCard bg-light p-3">
+	<div class="actuCard col-12 bg-light p-3">
 		<h2 class="presentationTitle text-primary p-0 fs-2 mb-3">
 			{{ actuality.title }}
 		</h2>
