--- a/templates/items/_header.html.twig
+++ b/templates/items/_header.html.twig
@@ -2,6 +2,8 @@
 	{{ encore_entry_link_tags('header') }}
 {% endblock %}
 <img class="banner" src="{{ asset('build/images/header.jpg') }}" alt="">
-<h1 class="headerText w-75 fs-1 text-light d-flex align-items-center justify-content-center align-self-center">
-	<i>Prenez rendez-vous avec votre bien-être !</i>
+<h1 class="headerText w-75 text-primary d-flex flex-column align-items-center gap-4">
+	<span class="fs-2">Cabinet de réflexologie</span>
+	<span class="mainTitle text-secondary">Voyage des sens</span>
+	<i class="fs-2">À la rencontre du bien-être</i>
 </h1>
