--- a/assets/styles/header.scss
+++ b/assets/styles/header.scss
@@ -1,20 +1,23 @@
 @import "variables.scss";
 
 .banner {
-    height            : 400px;
+    height            : 300px;
     width             : 100%;
     object-fit        : cover;
-    object-position   : 50% 30%;
-    // filter         : hsl(15, 66%, 32%);
+    object-position   : 50% 45%;
     box-shadow        : 0px 0px 8px -2px black;
+    filter: blur(2px) sepia(100%);
 }
 
 .headerText {
     position    : absolute;
-    top         : 9em;
-    display     : block;
+    top         : 7em;
     margin-left : 50vw;
     margin-right: 50vw;
     transform   : translate(-50%, -50%);
     text-shadow : 2px 2px 6px rgb(24, 24, 24);
+
+    .mainTitle{
+        font-size: 70px;
+    }
 }
