--- a/templates/admin_actuality/index.html.twig
+++ b/templates/admin_actuality/index.html.twig
@@ -27,7 +27,7 @@
 				<tr>
 					<td class="align-middle">{{ actuality.title }}</td>
 					<td>
-						<div class="d-flex justify-content-end flex-column flex-lg-row gap-3">
+						<div class="d-flex justify-content-end flex-column flex-lg-row gap-3 py-1">
 							<a class="btn btn-primary p-2 d-flex align-items-center justify-content-center" href="{{ path('admin_actuality_edit', {'id': actuality.id}) }}">
 								<i class="bi bi-pencil-square ms-1 me-2"></i>Modifier
 							</a>
