--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,7 +26,7 @@
 				{% for category, messages in app.flashes %}
 					{% for message in messages %}
 						<div class="row justify-content-center align-items-center m-0 mt-5">
-							<div class="col-5 d-flex align-items-center justify-content-center alert alert-{{ category }} alert-dismissible fade show flash">
+							<div class="col col-lg-5 d-flex align-items-center justify-content-center alert alert-{{ category }} alert-dismissible fade show flash">
 								{{ message|raw }}
 								<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 							</div>
