--- a/assets/styles/contact.scss
+++ b/assets/styles/contact.scss
@@ -4,6 +4,18 @@
     box-shadow   : $shadow-card;
     border       : 4px solid $secondary;
     border-radius: $spacing;
+
+    .input-group {
+        input {
+            border-top-left-radius  : 0;
+            border-end-start-radius: 0;
+        }
+
+        .input-group-text {
+            border-end-end-radius  : 0;
+            border-start-end-radius: 0;
+        }
+    }
 }
 
 .formButton {
