--- a/templates/contact/_form.html.twig
+++ b/templates/contact/_form.html.twig
@@ -8,33 +8,37 @@
 	<div class="row mb-3">
 		<div class="input-group">
 			<div class="input-group-prepend">
-				<span class="input-group-text p-2 pt-1 pb-1 bg-primary">
+				<span class="input-group-text p-2 pt-1 pb-1 bg-primary border-0">
 					<i class="bi bi-person fs-4 text-white text-center p-0"></i>
 				</span>
 			</div>
 			{{ form_widget(form.firstname) }}
 			{{ form_widget(form.lastname) }}
+			{{ form_errors(form.firstname) }}
+			{{ form_errors(form.lastname) }}
 		</div>
 	</div>
 	<div class="row mb-2 align-items-center justify-content-between">
 		<div class="mb-3">
 			<div class="input-group">
 				<div class="input-group-prepend">
-					<span class="input-group-text p-2 pt-1 pb-1 bg-primary">
+					<span class="input-group-text p-2 pt-1 pb-1 bg-primary border-0">
 						<i class="bi bi-telephone fs-4 text-white text-center p-0"></i>
 					</span>
 				</div>
 				{{ form_widget(form.phone) }}
+				{{ form_errors(form.phone) }}
 			</div>
 		</div>
 		<div class="mb-3">
 			<div class="input-group">
 				<div class="input-group-prepend">
-					<span class="input-group-text p-2 pt-1 pb-1 bg-primary">
+					<span class="input-group-text p-2 pt-1 pb-1 bg-primary border-0">
 						<i class="bi bi-envelope fs-4 text-white text-center p-0"></i>
 					</span>
 				</div>
 				{{ form_widget(form.mail) }}
+				{{ form_errors(form.mail) }}
 			</div>
 		</div>
 	</div>
