--- a/templates/presentation/_myJourney.html.twig
+++ b/templates/presentation/_myJourney.html.twig
@@ -1,7 +1,7 @@
 <div class="presentationElement p-3 row flex-lg-row flex-column m-0 bg-light">
-	<span class="p-0 mb-3">
-		<h2 class="presentationTitle text-primary p-0 fs-2">Mon parcours</h2>
-	</span>
+	<h2 class="p-0 mb-3">
+		<span class="presentationTitle text-primary p-0 fs-2">Mon parcours</span>
+	</h2>
 	<img class="myJourney col-lg-3 p-0 rounded" src="{{ asset('build/images/myJourney.jpg') }}" alt="">
 	<p class="col-lg-9 mt-3 mt-lg-0 p-0 ps-lg-3">Une petite présentation de mon parcours.
 		<br><br>
