--- a/templates/presentation/_reflexology.html.twig
+++ b/templates/presentation/_reflexology.html.twig
@@ -1,7 +1,7 @@
 <div class="presentationElement p-3 row flex-lg-row flex-column m-0 bg-light">
-	<span class="p-0 mb-3">
-		<h2 class="presentationTitle text-primary p-0 fs-2">La réflexologie</h2>
-	</span>
+	<h2 class="p-0 mb-3">
+		<span class="presentationTitle text-primary p-0 fs-2">La réflexologie</span>
+	</h2>
 	<img class="reflexologyPresentation col-lg-3 p-0 rounded" src="{{ asset('build/images/reflexology.jpg') }}" alt="">
 	<p class="col-lg-9 mt-3 mt-lg-0 p-0 ps-lg-3">La réflexologie apporte un soulagement des tensions tant physiques qu'émotionnelles et accompagne les personnes dans la gestion de différents troubles (sommeil, stress, douleur, fatigue, troubles du système urinaire, troubles du système digestif, troubles du système respiratoire etc...).
 		<br><br>
@@ -9,8 +9,10 @@
 		<br><br>
 		La réflexologie permet un retour à l'homéostasie, c'est à dire un retour à l'équilibre du corps humain. Cela est permis par la stimulation de zones ou de points réflexes, qui vont véhiculer un message nerveux jusqu'au cerveau. Le cerveau va ensuite traiter l'information et entraîner une régulation des zones afin de retrouver cet état d'équilibre.
 		<br><br></p>
-	<ul class="mt-lg-3 p-0">
+	<span class="mt-lg-3 p-0">
 		Je pratique la méthode Fischmann qui est une méthode merveilleuse qui a plusieurs particularités.
+	</span>
+	<ul class="p-0">
 		<li class="ms-3 mt-2">
 			La méthode Fischman se pratique sur les mains , les pieds , les oreilles et le visage. Vous vous sentez ainsi enveloppé durant toute la séance dans une bulle de bien-être.
 		</li>
