--- a/templates/session/_sessionCards.html.twig
+++ b/templates/session/_sessionCards.html.twig
@@ -23,7 +23,9 @@
 						</div>
 					</li>
 				{% endfor %}
-			</ul>
+				{% if category.sessions is not empty %}
+				</ul>
+			{% endif %}
 		</div>
 	{% endfor %}
 </div>
