--- a/templates/presentation/_reflexology.html.twig
+++ b/templates/presentation/_reflexology.html.twig
@@ -20,7 +20,7 @@
 			Cette méthode combine puissance et douceur par des techniques manuelles (pression, lissage...) et des techniques instrumentales (bâton de verre, chaufferette...). Les instruments sont très doux et agréables à recevoir. Ils ont la spécificité d'agir sur les zones ou points réflexes en étant plus puissants et plus précis que les mains.
 		</li>
 		<li class="ms-3 mt-2">
-			Cette méthode permet un réel lâcher-prise par son ambiance spa et l'accompagnement psycho-corporel durant la séance. Vous sortirez de chaque séance léger et apaisé
+			Cette méthode permet un réel lâcher-prise par son ambiance spa et l'accompagnement psycho-corporel durant la séance. Vous sortirez de chaque séance léger et apaisé.
 		</li>
 		<li class="ms-3 mt-2">
 			Un protocole personnalisé à vos besoins sera créé à chaque séance.
