--- a/templates/price/_gift.html.twig
+++ b/templates/price/_gift.html.twig
@@ -10,17 +10,18 @@
 			Je vous propose ces cartes cadeaux à offrir, que je peux personnaliser en fonction de vos demandes :
 		</p>
 		<ul class="ps-3">
-			<li class="mb-3">Un cadeau de découverte pour une heure de bien être intense : ✨ Les séances personnalisées de réflexologie combinée ✋🏼🦶🏼👂🏼👩🏼‍🦲
+			<li class="mb-3">Un cadeau de découverte pour une heure de bien être intense - ✨ Les séances personnalisées de réflexologie combinée ✋🏼🦶🏼👂🏼👩🏼‍🦲
 			</li>
-			<li class="my-3">Un cadeau douceur pour un suivi sur plusieurs séances : ✨ Les séances spécifiques : Bien-être et endometriose, Bien-être et maladie de Crohn, Bien-être et sevrage tabagique, Bien-être et fibromyalgie
+			<li class="my-3">Un cadeau douceur pour un suivi sur plusieurs séances - ✨ Les séances spécifiques : Bien-être et endometriose, Bien-être et maladie de Crohn, Bien-être et sevrage tabagique, Bien-être et fibromyalgie
 			</li>
-			<li class="my-3">Un cadeau pétillant pour retrouver un état d'équilibre : Les cures de bien-être : Anti-stress/Sommeil, Silhouette, Vitalité, Détox et Bien-être du dos
+			<li class="my-3">Un cadeau pétillant pour retrouver un état d'équilibre - Les cures de bien-être : Anti-stress/Sommeil, Silhouette, Vitalité, Détox et Bien-être du dos
 			</li>
-			<li class="mt-3">Un cadeau à partager à plusieurs pour prendre soin de soi : ✨ Les ateliers d'auto-réflexologie : Mieux dormir, Mieux digérer, Anti-stress, Bien-être du dos
+			<li class="mt-3">Un cadeau à partager à plusieurs pour prendre soin de soi - ✨ Les ateliers d'auto-réflexologie : Mieux dormir, Mieux digérer, Anti-stress, Bien-être du dos
 			</li>
 		</ul>
-		Tout le monde peut bénéficier de ce moment d'évasion et de douceur.
- Pour recevoir votre carte cadeau, il suffit de me contacter par téléphone au 06 32 56 01 27, par mail à voyagedessens.@gmail.com ou bien directement sur Facebook.
-
+		Tout le monde peut bénéficier de ce moment d'évasion et de douceur. Pour recevoir votre carte cadeau, il suffit de me contacter via la
+		<a href="{{ path('contact') }}">
+			page contact.
+		</a>
 	</div>
 </div>
