--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,9 +26,9 @@
 				{% for category, messages in app.flashes %}
 					{% for message in messages %}
 						<div class="row justify-content-center align-items-center m-0 mt-5">
-							<div class="col col-lg-5 d-flex align-items-center justify-content-center alert alert-{{ category }} alert-dismissible fade show flash fs-5">
+							<div class="col col-lg-5 d-flex align-items-center justify-content-center alert alert-{{ category }} alert-dismissible fade show flash">
 								{{ message|raw }}
-								<button type="button" class="btn-close fs-5" data-bs-dismiss="alert" aria-label="Close"></button>
+								<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 							</div>
 						</div>
 					{% endfor %}
