--- a/templates/items/_header.html.twig
+++ b/templates/items/_header.html.twig
@@ -5,7 +5,7 @@
 	<h1 class="headerText col-11 col-lg-4 d-flex flex-column text-primary align-items-center gap-4 border border-2 border-secondary rounded bg-light bg-opacity-75 p-3 mt-4 mt-lg-0">
 		<span>Cabinet de réflexologie</span>
 		<span class="mainTitle text-secondary">Voyage des sens</span>
-		<i class="border-bottom border-primary">À la rencontre du bien-être</i>
+		<i>À la rencontre du bien-être</i>
 	</h1>
 	<div class="col-11 col-lg-5 px-0 d-flex justify-content-center gap-3">
 		<img class="rounded my-4" src="{{ asset('build/images/headerJen.jpg') }}" alt="">
