--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -10,6 +10,11 @@ body {
     background-size      : cover;
     background-attachment: fixed;
     position             : relative;
+    min-height           : 100vh;
+
+    .mainContainer {
+        flex: 1;
+    }
 }
 
 h1,
