--- a/templates/items/_footer.html.twig
+++ b/templates/items/_footer.html.twig
@@ -18,7 +18,7 @@
 			<a href="#" class="general-conditions m-1 text-center">Conditions générales</a>
 		</div>
 		<div class="d-flex flex-column">
-			<a class="m-1 text-center" href="{% if app.user %} {{ path('admin_index') }} {% else %} {{ path('admin_index') }} {% endif %}">Espace admin</a>
+			<a class="m-1 text-center" href="{{ path('admin_index') }}">Espace admin</a>
 			{% if app.user %}
 				<a class="m-1 text-center" href="{{ path('logout') }}">Déconnexion</a>
 			{% endif %}
