--- a/templates/presentation/_myJourney.html.twig
+++ b/templates/presentation/_myJourney.html.twig
@@ -2,7 +2,7 @@
 	<h2 class="p-0 mb-3">
 		<span class="presentationTitle text-primary p-0 fs-2">Mon parcours</span>
 	</h2>
-	<img class="myJourney col-lg-3 p-0 rounded" src="{{ asset('build/images/myJourney.jpg') }}" alt="">
+	<img class="myJourney col-lg-3 p-0 rounded" src="{{ asset('build/images/myJourney.jpg') }}" alt="Photo de Jennifer Quenault">
 	<p class="col-lg-9 mt-3 mt-lg-0 p-0 ps-lg-3">Une petite présentation de mon parcours.
 		<br><br>
 		Infirmière depuis 2017, je me suis reconvertie vers les métiers du bien-être en 2020. Je ressentais l'envie, par le toucher, la relaxation et la détente de continuer à accompagner les personnes vers un mieux être et de participer à améliorer leur qualité de vie au quotidien.
