--- a/templates/presentation/_reflexology.html.twig
+++ b/templates/presentation/_reflexology.html.twig
@@ -2,7 +2,7 @@
 	<h2 class="p-0 mb-3">
 		<span class="presentationTitle text-primary p-0 fs-2">La réflexologie</span>
 	</h2>
-	<img class="reflexologyPresentation col-lg-3 p-0 rounded" src="{{ asset('build/images/reflexology.jpg') }}" alt="">
+	<img class="reflexologyPresentation col-lg-3 p-0 rounded" src="{{ asset('build/images/reflexology.jpg') }}" alt="Photo de Jennifer Quenault en train de pratiquer">
 	<p class="col-lg-9 mt-3 mt-lg-0 p-0 ps-lg-3">La réflexologie apporte un soulagement des tensions tant physiques qu'émotionnelles et accompagne les personnes dans la gestion de différents troubles (sommeil, stress, douleur, fatigue, troubles du système urinaire, troubles du système digestif, troubles du système respiratoire etc...).
 		<br><br>
 		Le réflexologue est un professionnel du bien-être et du développement personnel. Son but premier est d'améliorer la qualité de vie du bénéficiaire, en améliorant son bien-être au quotidien.
