--- a/templates/legal_notice/index.html.twig
+++ b/templates/legal_notice/index.html.twig
@@ -1,1 +1,102 @@
 {% extends "base.html.twig" %}
+{% block body %}
+	<h1 class="pageTitle text-primary my-5 fs-1">Mentions légales</h1>
+	<section class="row gap-5 m-0">
+		<div class="p-3 row flex-lg-row flex-column m-0 bg-light border border-4 border-secondary rounded">
+			<h2 class="p-0 mb-3">
+				<span class="text-primary p-0 fs-2 border-bottom border-secondary">
+					1 - Édition du site
+				</span>
+			</h2>
+			<p class="col-lg-9 mt-3 mt-lg-0 p-0 ps-lg-3">
+				En vertu de l'article 6 de la loi n° 2004-575 du 21 juin 2004 pour la confiance dans l'économie numérique, il est précisé aux utilisateurs du site internet <a href="https://voyage-des-sens-reflexologie.fr/">https://voyage-des-sens-reflexologie.fr/</a> l'identité des différents intervenants dans le cadre de sa réalisation et de son suivi:
+				<br><br>
+				Propriétaire du site : Jennifer Quenault Reflexologue (micro-entreprise) Voyage des sens N°Siret : 90122589600017 - Contact : voyagedessens.reflexo@gmail.com 0632560127 - Adresse : 5 rue notre dame 36400 La Châtre.
+				<br><br>
+				Identification de l'entreprise : Voyage Des Sens Jennifer Quenault Reflexologue (micro-entreprise) Voyage des sens N°Siret : 90122589600017 au capital social de Voyage Des Sens€ - SIREN : 90122589600017 - RCS ou RM : - Adresse postale : 5 rue notre dame 36400 La Châtre
+				<br><br>
+				Directeur de la publication : Quenault Jennifer - Contact : voyagedessens.reflexo@gmail.com.
+				<br><br>
+				Hébergeur : OVH SAS - 2 rue Kellermann - BP 80157 - 59053 Roubaix Cedex 1 - Téléphone : 1007
+				<br><br>
+				Délégué à la protection des données : Quenault Jennifer - voyagedessens.reflexo@gmail.com
+				<br><br>
+				Autres contributeurs : Thibault Fouré
+			</p>
+		</div>
+		<div class="p-3 row flex-lg-row flex-column m-0 bg-light border border-4 border-secondary rounded">
+			<h2 class="p-0 mb-3">
+				<span class="text-primary p-0 fs-2 border-bottom border-secondary">
+					2 - Propriété intellectuelle et contrefaçons.
+				</span>
+			</h2>
+			<p class="col-lg-9 mt-3 mt-lg-0 p-0 ps-lg-3">
+				Jennifer Quenault Reflexologue (micro-entreprise) Voyage des sens N°Siret : 90122589600017 est propriétaire des droits de propriété intellectuelle et détient les droits d’usage sur tous les éléments accessibles sur le site internet, notamment les textes, images, graphismes, logos, vidéos, architecture, icônes et sons.
+				<br><br>
+				Toute reproduction, représentation, modification, publication, adaptation de tout ou partie des éléments du site, quel que soit le moyen ou le procédé utilisé, est interdite, sauf autorisation écrite préalable de Jennifer Quenault Reflexologue (micro-entreprise) Voyage des sens N°Siret : 90122589600017.
+				<br><br>
+				Toute exploitation non autorisée du site ou de l’un quelconque des éléments qu’il contient sera considérée comme constitutive d’une contrefaçon et poursuivie conformément aux dispositions des articles L.335-2 et suivants du Code de Propriété Intellectuelle.
+			</p>
+		</div>
+		<div class="p-3 row flex-lg-row flex-column m-0 bg-light border border-4 border-secondary rounded">
+			<h2 class="p-0 mb-3">
+				<span class="text-primary p-0 fs-2 border-bottom border-secondary">
+					3 - Limitations de responsabilité.
+				</span>
+			</h2>
+			<p class="col-lg-9 mt-3 mt-lg-0 p-0 ps-lg-3">
+				Jennifer Quenault Reflexologue (micro-entreprise) Voyage des sens N°Siret : 90122589600017 ne pourra être tenu pour responsable des dommages directs et indirects causés au matériel de l’utilisateur, lors de l’accès au site <a href="https://voyage-des-sens-reflexologie.fr/">https://voyage-des-sens-reflexologie.fr/</a>.
+				<br><br>
+				Jennifer Quenault Reflexologue (micro-entreprise) Voyage des sens N°Siret : 90122589600017 décline toute responsabilité quant à l’utilisation qui pourrait être faite des informations et contenus présents sur <a href="https://voyage-des-sens-reflexologie.fr/">https://voyage-des-sens-reflexologie.fr/</a>.
+				<br><br>
+				Jennifer Quenault Reflexologue (micro-entreprise) Voyage des sens N°Siret : 90122589600017 s’engage à sécuriser au mieux le site <a href="https://voyage-des-sens-reflexologie.fr/">https://voyage-des-sens-reflexologie.fr/</a>, cependant sa responsabilité ne pourra être mise en cause si des données indésirables sont importées et installées sur son site à son insu.
+				<br><br>
+				Des espaces interactifs (espace contact ou commentaires) sont à la disposition des utilisateurs. Jennifer Quenault Reflexologue (micro-entreprise) Voyage des sens N°Siret : 90122589600017 se réserve le droit de supprimer, sans mise en demeure préalable, tout contenu déposé dans cet espace qui contreviendrait à la législation applicable en France, en particulier aux dispositions relatives à la protection des données.
+				<br><br>
+				Le cas échéant, Jennifer Quenault Reflexologue (micro-entreprise) Voyage des sens N°Siret : 90122589600017 se réserve également la possibilité de mettre en cause la responsabilité civile et/ou pénale de l’utilisateur, notamment en cas de message à caractère raciste, injurieux, diffamant, ou pornographique, quel que soit le support utilisé (texte, photographie …).
+			</p>
+		</div>
+		<div class="p-3 row flex-lg-row flex-column m-0 bg-light border border-4 border-secondary rounded">
+			<h2 class="p-0 mb-3">
+				<span class="text-primary p-0 fs-2 border-bottom border-secondary">
+					4 - CNIL et gestion des données personnelles.
+				</span>
+			</h2>
+			<p class="col-lg-9 mt-3 mt-lg-0 p-0 ps-lg-3">
+				Conformément aux dispositions de la loi 78-17 du 6 janvier 1978 modifiée, l’utilisateur du site <a href="https://voyage-des-sens-reflexologie.fr/">https://voyage-des-sens-reflexologie.fr/</a> dispose d’un droit d’accès, de modification et de suppression des informations collectées. Pour exercer ce droit, envoyez un message à notre Délégué à la Protection des Données : Quenault Jennifer - voyagedessens.reflexo@gmail.com.
+				<br><br>
+				Pour plus d'informations sur la façon dont nous traitons vos données (type de données, finalité, destinataire...), lisez notre <a href="https://voyage-des-sens-reflexologie.fr/">https://voyage-des-sens-reflexologie.fr/</a>.
+			</p>
+		</div>
+		<div class="p-3 row flex-lg-row flex-column m-0 bg-light border border-4 border-secondary rounded">
+			<h2 class="p-0 mb-3">
+				<span class="text-primary p-0 fs-2 border-bottom border-secondary">
+					5 - Liens hypertextes et cookies
+				</span>
+			</h2>
+			<p class="col-lg-9 mt-3 mt-lg-0 p-0 ps-lg-3">
+				Le site <a href="https://voyage-des-sens-reflexologie.fr/">https://voyage-des-sens-reflexologie.fr/</a> contient des liens hypertextes vers d’autres sites et dégage toute responsabilité à propos de ces liens externes ou des liens créés par d’autres sites vers <a href="https://voyage-des-sens-reflexologie.fr/">https://voyage-des-sens-reflexologie.fr/</a>.
+				<br><br>
+				La navigation sur le site <a href="https://voyage-des-sens-reflexologie.fr/">https://voyage-des-sens-reflexologie.fr/</a> est susceptible de provoquer l’installation de cookie(s) sur l’ordinateur de l’utilisateur.
+				<br><br>
+				Un "cookie" est un fichier de petite taille qui enregistre des informations relatives à la navigation d’un utilisateur sur un site. Les données ainsi obtenues permettent d'obtenir des mesures de fréquentation, par exemple.
+				<br><br>
+				Vous avez la possibilité d’accepter ou de refuser les cookies en modifiant les paramètres de votre navigateur. Aucun cookie ne sera déposé sans votre consentement.
+				<br><br>
+				Les cookies sont enregistrés pour une durée maximale de 1 mois.
+				<br><br>
+				Pour plus d'informations sur la façon dont nous faisons usage des cookies, lisez notre <a href="https://voyage-des-sens-reflexologie.fr/">https://voyage-des-sens-reflexologie.fr/</a>.
+			</p>
+		</div>
+		<div class="p-3 row flex-lg-row flex-column m-0 bg-light border border-4 border-secondary rounded">
+			<h2 class="p-0 mb-3">
+				<span class="text-primary p-0 fs-2 border-bottom border-secondary">
+					6 - Droit applicable et attribution de juridiction.
+				</span>
+			</h2>
+			<p class="col-lg-9 mt-3 mt-lg-0 p-0 ps-lg-3">
+				Tout litige en relation avec l’utilisation du site <a href="https://voyage-des-sens-reflexologie.fr/">https://voyage-des-sens-reflexologie.fr/</a> est soumis au droit français. En dehors des cas où la loi ne le permet pas, il est fait attribution exclusive de juridiction aux tribunaux compétents de Châteauroux.
+			</p>
+		</div>
+	</section>
+{% endblock %}
