--- a/templates/legal_notice/index.html.twig
+++ b/templates/legal_notice/index.html.twig
@@ -9,7 +9,9 @@
 				</span>
 			</h2>
 			<p class="col-lg-9 mt-3 mt-lg-0 p-0 ps-lg-3">
-				En vertu de l'article 6 de la loi n° 2004-575 du 21 juin 2004 pour la confiance dans l'économie numérique, il est précisé aux utilisateurs du site internet <a href="https://voyage-des-sens-reflexologie.fr/">https://voyage-des-sens-reflexologie.fr/</a> l'identité des différents intervenants dans le cadre de sa réalisation et de son suivi:
+				En vertu de l'article 6 de la loi n° 2004-575 du 21 juin 2004 pour la confiance dans l'économie numérique, il est précisé aux utilisateurs du site internet
+				<a href="https://voyage-des-sens-reflexologie.fr/">https://voyage-des-sens-reflexologie.fr/</a>
+				l'identité des différents intervenants dans le cadre de sa réalisation et de son suivi:
 				<br><br>
 				Propriétaire du site : Jennifer Quenault Reflexologue (micro-entreprise) Voyage des sens N°Siret : 90122589600017 - Contact : voyagedessens.reflexo@gmail.com 0632560127 - Adresse : 5 rue notre dame 36400 La Châtre.
 				<br><br>
@@ -21,7 +23,8 @@
 				<br><br>
 				Délégué à la protection des données : Quenault Jennifer - voyagedessens.reflexo@gmail.com
 				<br><br>
-				Autres contributeurs : Thibault Fouré
+				Autres contributeurs :
+				<a href="https://www.linkedin.com/in/thibaultfoure/">Thibault Fouré</a>
 			</p>
 		</div>
 		<div class="p-3 row flex-lg-row flex-column m-0 bg-light border border-4 border-secondary rounded">
@@ -45,11 +48,14 @@
 				</span>
 			</h2>
 			<p class="col-lg-9 mt-3 mt-lg-0 p-0 ps-lg-3">
-				Jennifer Quenault Reflexologue (micro-entreprise) Voyage des sens N°Siret : 90122589600017 ne pourra être tenu pour responsable des dommages directs et indirects causés au matériel de l’utilisateur, lors de l’accès au site <a href="https://voyage-des-sens-reflexologie.fr/">https://voyage-des-sens-reflexologie.fr/</a>.
+				Jennifer Quenault Reflexologue (micro-entreprise) Voyage des sens N°Siret : 90122589600017 ne pourra être tenu pour responsable des dommages directs et indirects causés au matériel de l’utilisateur, lors de l’accès au site
+				<a href="https://voyage-des-sens-reflexologie.fr/">https://voyage-des-sens-reflexologie.fr/</a>.
 				<br><br>
-				Jennifer Quenault Reflexologue (micro-entreprise) Voyage des sens N°Siret : 90122589600017 décline toute responsabilité quant à l’utilisation qui pourrait être faite des informations et contenus présents sur <a href="https://voyage-des-sens-reflexologie.fr/">https://voyage-des-sens-reflexologie.fr/</a>.
+				Jennifer Quenault Reflexologue (micro-entreprise) Voyage des sens N°Siret : 90122589600017 décline toute responsabilité quant à l’utilisation qui pourrait être faite des informations et contenus présents sur
+				<a href="https://voyage-des-sens-reflexologie.fr/">https://voyage-des-sens-reflexologie.fr/</a>.
 				<br><br>
-				Jennifer Quenault Reflexologue (micro-entreprise) Voyage des sens N°Siret : 90122589600017 s’engage à sécuriser au mieux le site <a href="https://voyage-des-sens-reflexologie.fr/">https://voyage-des-sens-reflexologie.fr/</a>, cependant sa responsabilité ne pourra être mise en cause si des données indésirables sont importées et installées sur son site à son insu.
+				Jennifer Quenault Reflexologue (micro-entreprise) Voyage des sens N°Siret : 90122589600017 s’engage à sécuriser au mieux le site
+				<a href="https://voyage-des-sens-reflexologie.fr/">https://voyage-des-sens-reflexologie.fr/</a>, cependant sa responsabilité ne pourra être mise en cause si des données indésirables sont importées et installées sur son site à son insu.
 				<br><br>
 				Des espaces interactifs (espace contact ou commentaires) sont à la disposition des utilisateurs. Jennifer Quenault Reflexologue (micro-entreprise) Voyage des sens N°Siret : 90122589600017 se réserve le droit de supprimer, sans mise en demeure préalable, tout contenu déposé dans cet espace qui contreviendrait à la législation applicable en France, en particulier aux dispositions relatives à la protection des données.
 				<br><br>
@@ -63,9 +69,12 @@
 				</span>
 			</h2>
 			<p class="col-lg-9 mt-3 mt-lg-0 p-0 ps-lg-3">
-				Conformément aux dispositions de la loi 78-17 du 6 janvier 1978 modifiée, l’utilisateur du site <a href="https://voyage-des-sens-reflexologie.fr/">https://voyage-des-sens-reflexologie.fr/</a> dispose d’un droit d’accès, de modification et de suppression des informations collectées. Pour exercer ce droit, envoyez un message à notre Délégué à la Protection des Données : Quenault Jennifer - voyagedessens.reflexo@gmail.com.
+				Conformément aux dispositions de la loi 78-17 du 6 janvier 1978 modifiée, l’utilisateur du site
+				<a href="https://voyage-des-sens-reflexologie.fr/">https://voyage-des-sens-reflexologie.fr/</a>
+				dispose d’un droit d’accès, de modification et de suppression des informations collectées. Pour exercer ce droit, envoyez un message à notre Délégué à la Protection des Données : Quenault Jennifer - voyagedessens.reflexo@gmail.com.
 				<br><br>
-				Pour plus d'informations sur la façon dont nous traitons vos données (type de données, finalité, destinataire...), lisez notre <a href="https://voyage-des-sens-reflexologie.fr/">https://voyage-des-sens-reflexologie.fr/</a>.
+				Pour plus d'informations sur la façon dont nous traitons vos données (type de données, finalité, destinataire...), lisez notre
+				<a href="https://voyage-des-sens-reflexologie.fr/">https://voyage-des-sens-reflexologie.fr/</a>.
 			</p>
 		</div>
 		<div class="p-3 row flex-lg-row flex-column m-0 bg-light border border-4 border-secondary rounded">
@@ -75,9 +84,14 @@
 				</span>
 			</h2>
 			<p class="col-lg-9 mt-3 mt-lg-0 p-0 ps-lg-3">
-				Le site <a href="https://voyage-des-sens-reflexologie.fr/">https://voyage-des-sens-reflexologie.fr/</a> contient des liens hypertextes vers d’autres sites et dégage toute responsabilité à propos de ces liens externes ou des liens créés par d’autres sites vers <a href="https://voyage-des-sens-reflexologie.fr/">https://voyage-des-sens-reflexologie.fr/</a>.
+				Le site
+				<a href="https://voyage-des-sens-reflexologie.fr/">https://voyage-des-sens-reflexologie.fr/</a>
+				contient des liens hypertextes vers d’autres sites et dégage toute responsabilité à propos de ces liens externes ou des liens créés par d’autres sites vers
+				<a href="https://voyage-des-sens-reflexologie.fr/">https://voyage-des-sens-reflexologie.fr/</a>.
 				<br><br>
-				La navigation sur le site <a href="https://voyage-des-sens-reflexologie.fr/">https://voyage-des-sens-reflexologie.fr/</a> est susceptible de provoquer l’installation de cookie(s) sur l’ordinateur de l’utilisateur.
+				La navigation sur le site
+				<a href="https://voyage-des-sens-reflexologie.fr/">https://voyage-des-sens-reflexologie.fr/</a>
+				est susceptible de provoquer l’installation de cookie(s) sur l’ordinateur de l’utilisateur.
 				<br><br>
 				Un "cookie" est un fichier de petite taille qui enregistre des informations relatives à la navigation d’un utilisateur sur un site. Les données ainsi obtenues permettent d'obtenir des mesures de fréquentation, par exemple.
 				<br><br>
@@ -85,7 +99,8 @@
 				<br><br>
 				Les cookies sont enregistrés pour une durée maximale de 1 mois.
 				<br><br>
-				Pour plus d'informations sur la façon dont nous faisons usage des cookies, lisez notre <a href="https://voyage-des-sens-reflexologie.fr/">https://voyage-des-sens-reflexologie.fr/</a>.
+				Pour plus d'informations sur la façon dont nous faisons usage des cookies, lisez notre
+				<a href="https://voyage-des-sens-reflexologie.fr/">https://voyage-des-sens-reflexologie.fr/</a>.
 			</p>
 		</div>
 		<div class="p-3 row flex-lg-row flex-column m-0 bg-light border border-4 border-secondary rounded">
@@ -95,7 +110,9 @@
 				</span>
 			</h2>
 			<p class="col-lg-9 mt-3 mt-lg-0 p-0 ps-lg-3">
-				Tout litige en relation avec l’utilisation du site <a href="https://voyage-des-sens-reflexologie.fr/">https://voyage-des-sens-reflexologie.fr/</a> est soumis au droit français. En dehors des cas où la loi ne le permet pas, il est fait attribution exclusive de juridiction aux tribunaux compétents de Châteauroux.
+				Tout litige en relation avec l’utilisation du site
+				<a href="https://voyage-des-sens-reflexologie.fr/">https://voyage-des-sens-reflexologie.fr/</a>
+				est soumis au droit français. En dehors des cas où la loi ne le permet pas, il est fait attribution exclusive de juridiction aux tribunaux compétents de Châteauroux.
 			</p>
 		</div>
 	</section>
