added target blank

--- a/templates/legal_notice/index.html.twig
+++ b/templates/legal_notice/index.html.twig
@@ -24,7 +24,7 @@
 				Délégué à la protection des données : Quenault Jennifer - voyagedessens.reflexo@gmail.com
 				<br><br>
 				Autres contributeurs :
-				<a href="https://www.linkedin.com/in/thibaultfoure/">Thibault Fouré</a>
+				<a href="https://www.linkedin.com/in/thibaultfoure/" target="_blank">Thibault Fouré</a>
 			</p>
 		</div>
 		<div class="p-3 row flex-lg-row flex-column m-0 bg-light border border-4 border-secondary rounded">
