back to original size on prices

--- a/templates/price/_rate.html.twig
+++ b/templates/price/_rate.html.twig
@@ -13,7 +13,7 @@
 		<tbody>
 			{% for category in categories %}
 				<tr>
-					<td class="align-middle border-0 p-3 w-50">{{ category.title }}</td>
+					<td class="align-middle border-0 p-3">{{ category.title }}</td>
 					<td class="align-middle border-0 p-3">{{ category.priceDescription|nl2br }}</td>
 				</tr>
 			{% endfor %}
