fix category description showing ckeditor

--- a/templates/admin_session/edit.html.twig
+++ b/templates/admin_session/edit.html.twig
@@ -3,7 +3,10 @@
 {% block title %}
 	Modifier une prestation -
 	{{ parent() }}
+{% endblock %}
 
+{% block stylesheets %}
+	{{ encore_entry_link_tags('admin') }}
 {% endblock %}
 
 {% block body %}
