--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -15,7 +15,7 @@
 		{% endif %}
 	</div>
 	<section class="row flex-column align-items-center m-0">
-		<div class="loginPrompt mb-5 col-lg-6 col-12 p-0 bg-light rounded border border-2 border-secondary">
+		<div class="loginPrompt mb-5 col-lg-6 col-12 p-0 bg-light rounded border border-2 border-secondary shadow">
 			<h2 class="text-center p-2 fs-3 text-primary rounded-top w-100">
 				Connexion
 			</h2>
