--- a/templates/items/_header.html.twig
+++ b/templates/items/_header.html.twig
@@ -2,13 +2,13 @@
 	{{ encore_entry_link_tags('header') }}
 {% endblock %}
 <div class="banner row m-0 flex-column flex-lg-row align-items-center justify-content-around rounded border-bottom border-4 border-secondary">
-	<h1 class="headerText col-11 col-lg-4 d-flex flex-column text-primary align-items-center gap-4 border border-2 border-secondary rounded bg-light bg-opacity-75 p-3 mt-4 mt-lg-0">
+	<h1 class="headerText col-11 col-lg-4 d-flex flex-column text-primary align-items-center gap-4 border border-2 border-secondary rounded bg-light bg-opacity-75 p-3 mt-4 mt-lg-0 shadow-sm">
 		<span>Cabinet de réflexologie</span>
 		<span class="mainTitle text-secondary">Voyage des sens</span>
 		<i>À la rencontre du bien-être</i>
 	</h1>
 	<div class="col-11 col-lg-5 px-0 d-flex justify-content-center gap-3">
-		<img class="rounded my-4" src="{{ asset('build/images/headerJen.jpg') }}" alt="">
-		<img class="tableHeader rounded w-50 my-4" src="{{ asset('build/images/header.jpg') }}" alt="">
+		<img class="rounded my-4 shadow-sm" src="{{ asset('build/images/headerJen.jpg') }}" alt="">
+		<img class="tableHeader rounded w-50 my-4 shadow-sm" src="{{ asset('build/images/header.jpg') }}" alt="">
 	</div>
 </div>
