--- a/templates/items/_actualityCards.html.twig
+++ b/templates/items/_actualityCards.html.twig
@@ -4,7 +4,7 @@
 			{{ actuality.title }}
 		</h2>
 		<div class="row m-0 justify-content-between gap-4 gap-lg-0">
-			<img class="actuImg col-lg-4 rounded p-0 align-self-start" src={% if actuality.picture is defined %} "{{ vich_uploader_asset(actuality, 'pictureFile') }}" {% endif %} alt="">
+			<img class="actuImg col-lg-4 rounded p-0 align-self-start {% if actuality.picture is null %}h-25 p-5{% endif %}" src={% if actuality.picture is not null %} "{{ vich_uploader_asset(actuality, 'pictureFile') }}" {% else %} "{{ asset('build/images/VDS_Vertical_Couleur.png') }}" {% endif %} alt="">
 			<div class="col-lg-8 p-0 px-lg-3">{{ actuality.content|raw }}</div>
 		</div>
 	</div>
