WIP Reset password

--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -16,7 +16,7 @@
 	</div>
 	<section class="row flex-column align-items-center m-0">
 		<div class="loginPrompt mb-5 col-lg-6 col-12 p-0 bg-light rounded border border-2 border-secondary shadow">
-			<h2 class="text-center p-2 fs-3 text-primary rounded-top w-100">
+			<h2 class="text-center p-2 fs-3 text-primary rounded-top w-100 shadow-sm">
 				Connexion
 			</h2>
 			<form action="{{ path('login') }}" method="post" class="d-flex flex-column my-2 p-3 gap-4">
@@ -27,6 +27,11 @@
 				<div class="form-floating">
 					<input type="password" class="form-control" name="_password" id="password" placeholder="Mot de passe">
 					<label for="password">Mot de passe</label>
+					<p class="text-end m-0 mt-2">
+						<a class="link-connection" href="{{ path('reset_password') }}">
+							Mot de passe oublié ?
+						</a>
+					</p>
 				</div>
 				<button class="btn btn-secondary">Se connecter</button>
 				<input type="hidden" name="_target_path" value="{{ path('admin_index') }}"/>
